--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # BACKEND
 DEV_BACKEND_PORT=3001
+WS_EVENT_BROADCAST_INTERVAL=1000 # milliseconds
 TG_BOT_API_TOKEN=
 
 # FRONTEND (do not use localhost if debugging tg-bot on a different device)
