--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon src/index.ts"
+    "dev": "NODE_ENV=development nodemon src/index.ts",
+    "build": "npx tsc",
+    "prod": "NODE_ENV=production node build/index.js"
   },
   "author": "Leo Immonen",
   "license": "ISC",
