Add nginx and certbot

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,6 @@ BACKEND_URL=http://localhost:3001
 # DATABASE
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+# CERTBOT (your email for TLS certificate notifications)
+CERTBOT_EMAIL=
