--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       TG_BOT_API_TOKEN: ${TG_BOT_API_TOKEN}
-      PORT: ${DEV_BACKEND_PORT}
+      PORT: ${BACKEND_PORT}
       WS_EVENT_BROADCAST_INTERVAL: ${WS_EVENT_BROADCAST_INTERVAL}
     volumes:
       - ./backend/src:/app/src
