--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,6 +34,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - dhparam:/etc/ssl/certs
     depends_on:
       - talkootunkki
     networks:
@@ -42,29 +43,15 @@ services:
       - 80:80
       - 443:443
 
-  certbot:
-    image: certbot/certbot
-    container_name: talkootunkki_certbot
-    volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-      - web-root:/var/www/html
-    depends_on:
-      - nginx
-    command: >
-      certonly
-      --webroot
-      --webroot-path=/var/www/html
-      --agree-tos
-      --email ${CERTBOT_EMAIL}
-      --no-eff-email
-      --staging
-      -d talkoot.vuodenkyla.fi
-
 volumes:
   certbot-etc:
   certbot-var:
-  web-root:
+  dhparam:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./nginx
+      o: bind
 
 networks:
   app-network:
