--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,8 @@
+events {
+    worker_connections 1024;
+}
+
 http {
-  
     server {
         listen 80;
         listen [::]:80;
@@ -14,10 +17,11 @@ http {
             rewrite ^ https://$host$request_uri? permanent;
         }
     }
-
+    
     server {
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
         server_name talkoot.vuodenkyla.fi;
 
         server_tokens off;
@@ -55,9 +59,6 @@ http {
             #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
             # enable strict transport security only if you understand the implications
         }
-
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
 
     }
 }
