--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
         listen 80;
         listen [::]:80;
         server_name talkoot.vuodenkyla.fi;
+        access_log off;
 
         location ~ /.well-known/acme-challenge {
             allow all;
@@ -23,6 +24,7 @@ http {
         listen [::]:443 ssl;
         http2 on;
         server_name talkoot.vuodenkyla.fi;
+        access_log off;
 
         server_tokens off;
 
