Add login and authentication

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,9 @@
 BACKEND_PORT=3001
 WS_EVENT_BROADCAST_INTERVAL=1000 # milliseconds
 TG_BOT_API_TOKEN=
+JWT_SECRET_KEY=
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
 
 # FRONTEND (do not use localhost if debugging tg-bot on a different device)
 BACKEND_URL=http://localhost:3001
