--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "author": "Leo Immonen",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
@@ -21,7 +24,10 @@
     "socket.io": "^4.6.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.197",
     "cors": "^2.8.5",
     "nodemon": "^2.0.22",
