--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,6 +53,11 @@ http {
 
         location @talkootunkki {
             proxy_pass http://talkootunkki:3001;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-XSS-Protection "1; mode=block" always;
             add_header X-Content-Type-Options "nosniff" always;
