Upload participations to Google Sheets as a backup

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,9 @@ POSTGRES_PASSWORD=
 
 # CERTBOT (your email for TLS certificate notifications)
 CERTBOT_EMAIL=
+
+# GOOGLE SHEETS API (used as a fallback)
+GOOGLE_SHEETS_ID=
+GOOGLE_SERVICE_ACCOUNT_EMAIL=
+# Download the JSON, remove newlines and paste the "private_key" field
+GOOGLE_PRIVATE_KEY=
