--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.9.0",
+    "google-spreadsheet": "^4.0.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "pg": "^8.11.1",
