--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,9 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       ADMIN_USERNAME: ${ADMIN_USERNAME}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      GOOGLE_SHEETS_ID: ${GOOGLE_SHEETS_ID}
+      GOOGLE_SERVICE_ACCOUNT_EMAIL: ${GOOGLE_SERVICE_ACCOUNT_EMAIL}
+      GOOGLE_PRIVATE_KEY: ${GOOGLE_PRIVATE_KEY}
       PORT: ${BACKEND_PORT}
     networks:
       - app-network
