--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ ADMIN_PASSWORD=
 
 # FRONTEND (do not use localhost if debugging tg-bot on a different device)
 BACKEND_URL=http://localhost:3001
+TELEGRAM_GROUP_LINK=
 
 # DATABASE
 POSTGRES_USER=
