Automate certificate renewal

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -43,6 +43,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - dhparam:/etc/ssl/certs
+      - web-root:/var/www/html
     depends_on:
       - talkootunkki
     networks:
@@ -51,9 +52,27 @@ services:
       - 80:80
       - 443:443
 
+  certbot:
+    image: certbot/certbot
+    container_name: talkootunkki_certbot
+    restart: always
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    command: >
+      renew
+        --webroot
+        --webroot-path=/var/www/html
+        --quiet
+        --agree-tos
+        --no-eff-email
+        --deploy-hook 'docker kill --signal=HUP talkootunkki_nginx'
+
 volumes:
   certbot-etc:
   certbot-var:
+  web-root:
   dhparam:
     driver: local
     driver_opts:
