--- a/docker-compose.setup.yml
+++ b/docker-compose.setup.yml
@@ -29,7 +29,7 @@ services:
         --agree-tos
         --email ${CERTBOT_EMAIL}
         --no-eff-email
-        -d talkoot.vuodenkyla.fi
+        -d ${DOMAIN_NAME}
 
 volumes:
   certbot-etc:
