--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - app-network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   nginx:
     image: nginx:mainline-alpine
@@ -70,6 +72,7 @@ services:
         --deploy-hook 'docker kill --signal=HUP talkootunkki_nginx'
 
 volumes:
+  postgres_data:
   certbot-etc:
   certbot-var:
   web-root:
