--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,6 +47,11 @@ http {
         ssl_stapling_verify on;
         resolver 8.8.8.8;
 
+#       location /adminer/ {
+#           proxy_pass          http://adminer:8080/;
+#           proxy_set_header    X-Forwarded-For $remote_addr;
+#       }
+
         location / {
             try_files $uri @talkootunkki;
         }
