--- a/docker-compose.setup.yml
+++ b/docker-compose.setup.yml
@@ -6,12 +6,15 @@ services:
     container_name: setup_nginx
     restart: always
     volumes:
-      - ./nginx/nginx.setup.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.setup.conf:/etc/nginx/templates/default.conf.template
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - web-root:/var/www/html
     ports:
       - 80:80
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
+    command: /bin/sh -c "envsubst '\$DOMAIN_NAME' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   certbot:
     image: certbot/certbot
