--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,7 @@ services:
       GOOGLE_SHEETS_ID: ${GOOGLE_SHEETS_ID}
       GOOGLE_SERVICE_ACCOUNT_EMAIL: ${GOOGLE_SERVICE_ACCOUNT_EMAIL}
       GOOGLE_PRIVATE_KEY: ${GOOGLE_PRIVATE_KEY}
-      VITE_TELEGRAM_GROUP_LINK: ${TELEGRAM_GROUP_LINK}
+      VITE_TELEGRAM_GROUP_LINK: ${VITE_TELEGRAM_GROUP_LINK}
       PORT: ${BACKEND_PORT}
     networks:
       - app-network
