Revert "Use env variable for domain name"
This reverts commit eeff60d14604fd6ec5595e08a756cd027917caee.

--- a/nginx/nginx.setup.conf
+++ b/nginx/nginx.setup.conf
@@ -9,7 +9,7 @@ http {
 
         root /var/www/html;
 
-        server_name $DOMAIN_NAME;
+        server_name talkoot.vuodenkyla.fi;
 
         location ~ /.well-known/acme-challenge {
             allow all;
