--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,7 +41,7 @@ services:
     container_name: talkootunkki_nginx
     restart: always
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/templates/default.conf.template
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - dhparam:/etc/ssl/certs
@@ -53,9 +53,6 @@ services:
     ports:
       - 80:80
       - 443:443
-    environment:
-      - DOMAIN_NAME=${DOMAIN_NAME}
-    command: /bin/sh -c "envsubst '\$DOMAIN_NAME' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   certbot:
     image: certbot/certbot
