--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name $DOMAIN_NAME;
+        server_name talkoot.vuodenkyla.fi;
         access_log off;
 
         location ~ /.well-known/acme-challenge {
@@ -18,18 +18,18 @@ http {
             rewrite ^ https://$host$request_uri? permanent;
         }
     }
-
+    
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
         http2 on;
-        server_name $DOMAIN_NAME;
+        server_name talkoot.vuodenkyla.fi;
         access_log off;
 
         server_tokens off;
 
-        ssl_certificate /etc/letsencrypt/live/$DOMAIN_NAME/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/$DOMAIN_NAME/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/talkoot.vuodenkyla.fi/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/talkoot.vuodenkyla.fi/privkey.pem;
 
         ssl_buffer_size 8k;
 
