--- a/nginx/nginx.setup.conf
+++ b/nginx/nginx.setup.conf
@@ -9,7 +9,7 @@ http {
 
         root /var/www/html;
 
-        server_name talkoot.vuodenkyla.fi;
+        server_name talkoot.kampusjaosto.fi;
 
         location ~ /.well-known/acme-challenge {
             allow all;
